# agentos-community

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agents.yaml  audit-skills.cjs  book.toml  fix-mustache.cjs  index.yaml  manifest.json  package.json  test-skills.cjs  tsconfig.json  vitest.config.ts  vitest.schema.config.ts
.ROADMAP/: frbr-work-expression.md  skill-signup-utility.md
.githooks/: pre-commit
.husky/: pre-commit  pre-push
.old-roadmap/: chatgpt-skill-spec.md
apps/: browser.yaml
components/: account-list.tsx  action-bar.tsx  activity-footer.tsx  app-toolbar.tsx  connector-bar.tsx  connector-bookmarks.tsx  content.tsx  entity-detail.tsx  entity-form.tsx  entity-grid.tsx  entity-list.tsx  entity-picker.tsx  grid.tsx  image.tsx  list.tsx  markdown-editor.tsx  markdown.tsx  plugin-list.tsx  request-response.tsx  skill-picker.tsx  tabs.tsx  text-input.tsx  text.tsx  toggle.tsx  url-bar.tsx  wallpaper-picker.tsx
docs/: SUMMARY.md  agent-ergonomics.md  catalog.md  connections-handoff.md  development-process.md  editing-the-book.md  getting-started.md  goodreads-friends-handoff.md  intro.md  principles.md  (+3 more)
sdk/: generate.py  pyproject.toml  spec.yaml  test_cookie_writeback.py  test_vectors.py
sdk/agentos/: __init__.py  __main__.py  _bridge.py  _generated.py  cli.py  crypto.py  dates.py  decorators.py  guide.py  http.py  llm.py  oauth.py  progress.py  scaffold.py  shape_cli.py  shapes.py  shell.py  sql.py  text.py  tools.py  validate.py
sdk/agentos/macos/: __init__.py  keychain.py  plist.py
(+1097 files in other folders)
